--- a/src/main/webapp/css/user-page.css
+++ b/src/main/webapp/css/user-page.css
@@ -23,7 +23,7 @@
 
 /* Give each message a rounded border. */
 .message-div {
-  border: thin solid black;
+  border: thin solid white;
   border-radius: 5px;
   margin-top: 20px;
 }
@@ -36,7 +36,7 @@
 
 /* Add a bottom border to the message header. */
 .message-header {
-  border-bottom: thin solid black;
+  border-bottom: thin solid white;
   padding: 5px;
 }
 
